--- a/identity/adoc/identity.adoc
+++ b/identity/adoc/identity.adoc
@@ -24,7 +24,7 @@
 :table-caption!:
 :example-caption!:
 :figure-caption!:
-:imagesdir: ../images
+:imagesdir: images
 :includedir: _includes
 :underscore: _
 :sourcedir: ../maven-examples/src/main/java
