--- a/identity/adoc/01Introduction.adoc
+++ b/identity/adoc/01Introduction.adoc
@@ -3,7 +3,7 @@ This development guide on the Maritime Cloud identity platform describes the cur
 
 Please do not email us directly about usage questions. Instead use our Google Group at https://groups.google.com/forum/#!forum/maritimecloud for general usage questions. In this way future users can see answers to commonly asked questions. Google Groups is also where we post information about new releases and updated documentation.
 
-This developer guide is intended to make you familiar with developing secure applications and services for the Maritime Cloud. In addition to this developer guide this http://developers.maritimecloud.net/Identity%20Management%20and%20Security%20White%20Paper.docx[whitepaper] is a good read.
+This developer guide is intended to make you familiar with developing secure applications and services for the Maritime Cloud in particular with regards to Identity Management.
 
 === A Bit of History
 The Maritime Cloud project started out as an internal project at the Danish Maritime Authority in the autumn of 2012.
@@ -30,8 +30,14 @@ There are 3 different core services provided by the Maritime Cloud
 
 This guide will predominantly discuss the identity registry.
 
+
+=== Signing up
+In order to get an organization, its users and any ships the organization might own on to the Maritime Cloud. The organization wishing to use the Maritime Cloud needs to perform a signup process. The process is currently manual but will be replaced with an automatic one in the future.
+
+Send a email to Tomas Christensen at tgc@dma.dk with the name of your organization and whom will be the main administrator in order to signup.
+
 === Feedback
-Readers may send feedback about errors, omissions, and ambiguities in this guide to kasperni@gmail.com or even better submit a pull request to the documentation available at https://github.com/MaritimeCloud/Documentation/tree/master/developer-guide/adoc.
+Readers may send feedback about errors, omissions, and ambiguities in this guide to tgc@dma.dk or even better submit a pull request to the documentation available at https://github.com/MaritimeCloud/Documentation/tree/master/developer-guide/adoc.
 
 As previously mentioned questions about usage of the Maritime Cloud should be directed to our Google Group at https://groups.google.com/forum/#!forum/maritimecloud
 
